// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media component should be a Media Content 1`] = `
<DocumentFragment>
  <div
    class="content"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Media component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <article
    class="media other-class this-is-a-test"
  >
    Content
  </article>
</DocumentFragment>
`;

exports[`Media component should have media classname 1`] = `
<DocumentFragment>
  <article
    class="media"
  >
    <img
      alt="placeholder"
      src="http://bulma.io/images/placeholders/128x128.png"
    />
  </article>
</DocumentFragment>
`;

exports[`Media component should hbe a Media Item 1`] = `
<DocumentFragment>
  <figure
    class="media-left"
  >
    <img
      alt="placeholder"
      src="http://bulma.io/images/placeholders/128x128.png"
    />
  </figure>
</DocumentFragment>
`;

exports[`Media component should hbe a Media Item Centered 1`] = `
<DocumentFragment>
  <figure
    class="media-content"
  >
    <img
      alt="placeholder"
      src="http://bulma.io/images/placeholders/128x128.png"
    />
  </figure>
</DocumentFragment>
`;

exports[`Media component should render 1`] = `
<DocumentFragment>
  <article
    class="media"
  />
</DocumentFragment>
`;

exports[`Media component should render 2`] = `
<DocumentFragment>
  <div
    class="content"
  />
</DocumentFragment>
`;

exports[`Media component should render 3`] = `
<DocumentFragment>
  <div
    class="media-content"
  />
</DocumentFragment>
`;

exports[`Media component should use inline styles 1`] = `
<DocumentFragment>
  <article
    class="media"
    style="height: 250px;"
  />
</DocumentFragment>
`;
